syntax = "proto3";
option go_package=".;proto";
package proto;


service CrossService{
  rpc CrossIn(stream CrossLanguageRequest)  returns(stream CrossLanguageRespose){};
}

message CrossLanguageRequest{
  string txid=1;
  string chainid=2;
  string senderid=3;
  string recverid=4;
  int32  rw=5;
  bytes sendercerts=6;
  bytes sendersign=7;
  bytes apk=8;
  bytes messages=9;
  bytes vdfsign=10;
  repeated bytes sigmas=11;
}

message CrossLanguageRespose{
  int32 status=1;
  string msg=2;
}
